2011-04-14  Jeremy Cribb <jcribb@email.unc.edu>
	* SetFPSandMinFrames.m:  added.  Ricky's function for automatically setting the frames per second and tracker filtering for video tracking datasets.

2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: corrected typo in documentation.

2010-09-30  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: replaced center-of-mass algorithm with one that doesn't care about trackers popping in and out of existence.  It estimates the center-of-mass velocity for adjacent frames that have consistent trackers.  Still only works for samples with linear drift.

2009-10-06  rspero@physics.unc.edu
	* Added data filters to load_video_tracking to delete based on minPixelRange, minFrames, tCrop, and xyCrop

2008-05-04  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: added "linear drift vector" mode of subtraction via Adam Shields and Briana Carstens.

2008-11-14  Jeremy Cribb <jcribb@email.unc.edu>
	* batch_load_video_tracking.m: modified documentation to better match Mathworks convention.
	* erase_negatives_in_vrpn.m: same.
	* filter_out_repeats_in_vrpn.m: same.
	* get_bead.m: same.
	* get_beadmax.m: same.
	* load_lasertrap_tracking.m: same.
	* load_laser_tracking.m: same.
	* load_video_tracking.m: same.
	* load_vrpn_tracking.m: same.
	* load_xls_tracking.m: same.
	* plot_vrpn_tracking.m: same.
	* remove_drift.asv: same.
	* remove_drift.m: same.
	* tclip.m: same.
	* tjoin.m: same.
	* video_tracking_constants.m: same.

2008-10-31  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: added Ricky's function that selects and removes trackers that fit one or both of these conditions:  the number of tracked points is less than a defined number, or the tracked displacment does not exceed some defined minimum distance.

2008-02-08  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: empty trackers are now automatically removed from ID.

2008-01-11  Jeremy Cribb <jcribb@email.unc.edu>