@@ -1,4 +1,7 @@
 2011-04-14  Jeremy Cribb <jcribb@email.unc.edu>
+	* SetFPSandMinFrames.m:  fixed bug where saving directory list corrupted output.
+
+2011-04-14  Jeremy Cribb <jcribb@email.unc.edu>
 	* SetFPSandMinFrames.m:  added.  Ricky's function for automatically setting the frames per second and tracker filtering for video tracking datasets.
 
 2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
